tests/baselines/reference/errorMessagesIntersectionTypes02.errors.txt
tests/cases/compiler/errorMessagesIntersectionTypes02.ts(14,5): error TS2322: Type '{ fooProp: "frizzlebizzle"; } & Bar' is not assignable to type 'FooBar'.
  Types of property 'fooProp' are incompatible.
    Type '"frizzlebizzle"' is not assignable to type '"hello" | "world"'.


==== tests/cases/compiler/errorMessagesIntersectionTypes02.ts (1 errors) ====
    interface Foo {
        fooProp: "hello" | "world";
    }
    
    interface Bar {
        barProp: string;
    }
    
    interface FooBar extends Foo, Bar {
    }
    
    declare function mixBar<T>(obj: T): T & Bar;
    
    let fooBar: FooBar = mixBar({
        ~~~~~~
!!! error TS2322: Type '{ {|fooProp|0|}: "frizzlebizzle"; } & {|Bar|1|}' is not assignable to type '{|FooBar|2|}'.
!!! error TS2322:   Types of property 'fooProp' are incompatible.
!!! error TS2322:     Type '"frizzlebizzle"' is not assignable to type '"hello" | "world"'.
!!! annotated symbol 0 tests/cases/compiler/errorMessagesIntersectionTypes02.ts:15:5
!!! annotated symbol 1 tests/cases/compiler/errorMessagesIntersectionTypes02.ts:5:11
!!! annotated symbol 2 tests/cases/compiler/errorMessagesIntersectionTypes02.ts:9:11
        fooProp: "frizzlebizzle"
    });